fix scrollbar issue with modals on chrome

--- a/maps/static/css/proview.css
+++ b/maps/static/css/proview.css
@@ -14,6 +14,13 @@ body {
 	overflow-y: scroll;
 }
 
+
+.modal-body {
+	position: relative;
+	max-height: 600px;
+	overflow-y: scroll;
+}
+
 .modal-xl {
 	min-width: 60%;
 }
